# SentimentArcsPackage

./: .gitignore  LICENSE  README.md  setup.cfg
old_files_for_reference/: cleaners.py  nb1_preprocess.py  nb2_R.py  nb6_analysis.py
src/imppkg/: SA_settings.toml  __init__.py  cleaners.py  hello.py  nb3_lexical.py  nb6_analysis.py  run_sentimentr.R  simplifiedSA.py  simplifiedSA_functions.txt  temp.py  usage.py
test/: test_setup.py
tests/: test_downloading.py
