[metadata]
name = SentArcs
version = 0.0.2
url = https://github.com/afellesonSentArcs/<package repo name>
author = Alex Felleson
author_email = "Alex Felleson" <L.felleson@icloud.com>
description = Contains functions to run and produce results from an ensemble of sentiment analysis models.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    transformers
    clean-text
    unidecode
    contractions # u-->you causes issues. i think i can do this on my own with regex?
    numpy
    pandas # use modin instead for speed
    # modin # may cause issues if you dont have ray, dask, or unidisk installed. see modin docs. we're not using this anymore bc it caused other problems in the code and we'd rather the code be robust than fast
    matplotlib
    seaborn
    datetime
    scikit-learn
    requests
    nltk
    scipy
    vaderSentiment
    transformers[torch] # both transformers and torch are needed for distilbert
    textblob
    # space # from nb1. NLP.
    # texthero # from nb1. dependent on an old version of spacy (<3.0)
    # pysbd # from nb1. Advanced Sentence Boundry Detection.
    # emot # from nb1. emoji & emoticons. no dependencies. 5 libraries depend on it. i might have tweaks for emoticons (smile(s) instead of smiley)
    

[options.packages.find]
where = src
exclude = test*

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source = 
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py310

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}