[metadata]
name = SentArcs
version = 0.0.2
url = https://github.com/afellesonSentArcs/<package repo name>
author = Alex Felleson
author_email = "Alex Felleson" <L.felleson@icloud.com>
description = Contains functions to run and produce results from an ensemble of sentiment analysis models.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = # versions in comments definitely work. if issues arise with current ranges, approach the commented versions.
    transformers # 4.33.2
    clean-text # 0.6.0
    contractions # 0.1.73 # Note: u-->you causes issues. Remove dependency and use regex instead for contraction correction? The 'u' issue is not super relevant until support for Tweets is added.
    numpy # 1.26.0
    pandas # 2.1.1 # use modin instead for speed
    # modin # May cause issues if you dont have ray, dask, or unidisk installed. See modin docs. We're not using this anymore bc it caused other problems in the code and we'd rather the code be robust than fast
    matplotlib # 3.8.0
    seaborn # 0.12.2
    datetime # 5.2
    scikit-learn # 1.3.1
    requests # 2.31.0
    # nltk # Note: now using spacy/pysbd instead. Also, textblob depends on certain versions of nltk.
    # itertools # Needed only if using both nltk and pysbd
    scipy # 1.11.2
    vaderSentiment # 3.3.2
    transformers[torch] # both transformers and torch are needed for distilbert # transformers 4.33.2, torch 2.0.1
    textblob>=0.16.0 # 0.17.1
    rpy2>=3.0 # 3.5.14
    spacy>=3.0 # 3.6.1
    pysbd>=0.3.4 # 0.3.4
    # texthero # from nb1. dependent on an old version of spacy (<3.0)
    # emot # from nb1. emoji & emoticons. no dependencies. 5 libraries depend on it. i might have tweaks for emoticons (smile(s) instead of smiley)
    

[options.packages.find]
where = src
exclude = test*

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source = 
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py310

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}