[metadata]
name = SentArcs
version = 0.0.2
url = https://github.com/afellesonSentArcs/<package repo name>
author = Alex Felleson
author_email = "Alex Felleson" <L.felleson@icloud.com>
description = Run and view results from an ensemble of sentiment analysis models.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = # versions in comments definitely work. if issues arise with current ranges when tested on other systems, approach the commented versions.
    numpy # idk. 1.25.0
    pandas # 2.0.1 # could use modin instead for speed
    matplotlib # Idk. (Seabord has >=3.1,!=3.6.1.) 3.7.1
    scikit-learn # 1.2.2. scikit-learn constrains numpy version pretty 
        #narrowly (>=1.19.5,<1.27.0), which could cause conflicts in the 
        # future. scikit is only being used to rescale to 0 mean and 1 
        # sd, which can be done manually but may be slower and less robust.
    datetime # 5.1
    requests # spacy constrains requests version. 2.30.0
    spacy>=3.0 # Bc of new add_pipe() syntax. 3.6.1.
    clean-text # 0.6.0 # Priority for dependency removal.
    contractions # 0.1.73 # Priority for dependency removal. 
        # Note: u-->you causes issues. Remove dependency and use regex 
        # instead for contraction correction? The 'u' issue is not super 
        # relevant until support for Tweets is added.
    vaderSentiment # 3.3.2
    transformers[torch] # both transformers and torch are needed for distilbert # transformers 4.33.2, torch 2.0.1
    textblob>=0.16.0 # 0.17.1. Note: requires nltk>=3.1.
    rpy2>=3.0 # 3.5.14
    scipy>=1.2.0 # 1.2.0 had the last important change to find_peaks(). 
        # scipy is constrained to >=1.3.2 by scikit-learn currently. 1.10.1
    # modin # Modin uses multiple cores for operations 
        # on pandas dfs, so it should be faster. Requires pandas==1.5.3.
        # May cause issues if you dont have ray, dask, or unidisk
        # installed. See modin docs. 
        # Not currently using modin because it uses an old version of pandas, 
        # forcing a reinstall of pandas, and may remove some
        # functionality from df methods that we need. Right now, we'd
        # rather the code be robust than fast. Could 
        # reevaluate this choice in the future. If using modin, do not
        # import pandas and instead say "import modin as pd".
    # nltk # Note: now using spacy/pysbd instead. Also, textblob depends 
        # on certain versions of nltk.
    # pysbd>=0.3.4 # Idk about versions. Technically no dependencies, 
        # but only works with spacy<3.0.
    # itertools # Needed only if using both nltk and spacy
    # texthero # From OG nb1. Dependent on spacy<3.0.
    # emot # From OG nb1. Emoji & emoticons. No dependencies. 5 
        # libraries depend on it. Might want to tweak handling of 
        # emoticons (e.g., smile instead of smiley)
    # seaborn # If you want better graphics. No other requirements here depend on it.

[options.packages.find]
where = src
exclude = test*

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers -s 
    # -s = display output from print statements within tests
xfail_strict = True

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source = 
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py310

[testenv]
deps =
    pytest
    pytest-cov
    delayed-assert # or: git+https://github.com/pr4bh4sh/delayed-assert
commands =
    pytest {posargs} # example: $ tox -- -pytest_flag

[testenv:get_dep_tree]
allowlist_externals = pipdeptree
commands = pipdeptree
